--- a/src/pages/DreamsPage/styles.module.css
+++ b/src/pages/DreamsPage/styles.module.css
@@ -1,4 +1,26 @@
-.root {
+.contentWrapper {
   display: grid;
   grid-template-rows: 200px 1fr 80px;
+}
+
+.root {
+  display: grid;
+  grid-template-rows: minmax(100vh, auto);
+  grid-template-columns: 300px 1fr;
+  text-align: center;
+}
+
+.content,
+.footer {
+  color: #e5e3e4;
+}
+
+.content {
+  background-color: #ffffff;
+  display: grid;
+  grid-template-rows: minmax(100vh, auto);
+}
+
+.footer {
+  background-color: #469597;
 }
