--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -1,14 +1,20 @@
 .root {
-  min-width: 25px;
-  border-radius: 4px;
-
+  border-radius: 7px;
   cursor: pointer;
+  color: var(--white);
+}
+
+.root:hover {
+  background-color: var(--pink);
 }
 
 .l {
+  padding: 10px 25px;
   font-size: 20px;
   min-width: 30px;
-  min-height: 30px;
+  line-height: 20px;
+  height: 40px;
+  width: 50%;
 }
 .m {
   font-size: 16px;
@@ -22,9 +28,9 @@
 }
 
 .light {
-  background-color: white;
+  background-color: var(--green);
   border: 1px solid grey;
-  color: black;
+  color: var(--white);
 }
 
 .dark {
