--- a/src/components/DreamTab/styles.module.css
+++ b/src/components/DreamTab/styles.module.css
@@ -1,8 +1,14 @@
 .root {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: var(--black);
+  min-width: 25px;
+  border: 1px solid var(--black);
+  border-radius: 4px;
+  cursor: pointer;
+  padding: 5px;
 }
 
 .active {
-    color: #e18800;
+  color: var(--white);
+  background-color: var(--pink);
 }
