--- a/src/components/Calendar/styles.module.css
+++ b/src/components/Calendar/styles.module.css
@@ -3,10 +3,10 @@
   min-height: 440px;
 }
 
-.rangepicker__input {
+.refToDate {
   display: inline-flex;
   padding: 12px 16px 12px 40px;
-  cursor: pointer;
+
   font-weight: normal;
   font-size: 16px;
   line-height: 20px;
