--- a/src/components/Sidebar/styles.module.css
+++ b/src/components/Sidebar/styles.module.css
@@ -10,13 +10,21 @@ h2,
 h3,
 h4,
 h5 {
-  padding: 20px 10px;
+  padding: 15px 10px;
 }
 
 h1 {
   font-size: 2rem;
   font-weight: 700;
+}
+
+h1,
+h3 {
   color: var(--dark-green);
+}
+
+h3 {
+  font-size: 1.1rem;
 }
 
 .logo {
@@ -25,7 +33,7 @@ h1 {
 }
 
 .tags {
-  margin-top: 5rem;
+  margin-top: 2rem;
 }
 
 @media (prefers-reduced-motion: no-preference) {
