--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -8,16 +8,59 @@
 }
 
 .button:hover {
-  background-color: var(--pink);
   cursor: pointer;
 }
 
+.roundBtn {
+  position: relative;
+
+  background-color: var(--white);
+  border: 4px solid var(--dark-green);
+  border-radius: 50%;
+  height: 120px;
+  width: 120px;
+
+  margin: 0px auto 5rem auto;
+  color: var(--white);
+  opacity: 0.75;
+  transition: opacity linear 0.3s;
+}
+
+.roundBtn::after {
+  content: "+";
+  font-size: 5rem;
+  color: var(--dark-green);
+  top: 50%;
+  left: 0px;
+}
+
+.roundBtn:hover {
+  cursor: pointer;
+  opacity: 1;
+  background-color: var(--white);
+  border: 3px solid var(--green);
+  border-radius: 7%;
+  width: 300px !important;
+  height: 120px;
+  left: 0px;
+
+  color: var(--white);
+}
+
+.roundBtn:hover::after {
+  content: "Добавить сон";
+  font-size: 2.2rem;
+  color: var(--dark-green);
+  top: 50%;
+  left: 0px;
+  transition: content ease-in 1s;
+}
+
 .l {
-  padding: 10px 25px;
   font-size: 20px;
   min-width: 30px;
-  line-height: 20px;
-  height: 40px;
+  max-height: 60px;
+  height: 100%;
   width: 40%;
   box-shadow: 1px 1px 5px var(--black);
 }
