--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -1,8 +1,22 @@
-.root {
+.footer {
   background-color: var(--green);
-  padding: 20px;
+  width: 100%;
 }
 
 .buttons {
   margin-top: 10px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--white);
+}
+
+.footer a {
+  color: var(--white);
+  margin: 0px auto;
+
+  border-bottom: 1px solid var(--white);
 }
