--- a/src/components/Layout/styles.module.css
+++ b/src/components/Layout/styles.module.css
@@ -1,6 +1,16 @@
-.root {
+.layout {
   display: grid;
-  grid-template-rows: minmax(100vh, auto);
-  grid-template-columns: 300px 1fr;
+  grid-template-rows: 1fr;
+  line-height: 27px;
+
   text-align: center;
+}
+
+.root,
+.layout {
+  width: 100%;
+  height: 100%;
+  max-width: 100vw;
+  max-height: 100vh;
+  position: relative;
 }
