--- a/src/index.css
+++ b/src/index.css
@@ -34,7 +34,14 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100vw;
   height: 100vh;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
+  max-width: 100vw;
 }
 :root {
   --pink: #ddbeaa;
@@ -50,4 +57,12 @@ body {
   --grey-light: #c2cfe0;
   --white: #ffffff;
   --black: #000000;
+}
+
+.marTopLrg {
+  margin-top: 33px;
+}
+
+.marBottomMed {
+  margin-bottom: 22px;
 }
