--- a/src/pages/NewDreamPage/styles.module.css
+++ b/src/pages/NewDreamPage/styles.module.css
@@ -1,6 +1,3 @@
-.root {
-}
-
 .hero {
   background-color: var(--green);
 }
@@ -12,13 +9,12 @@
 
 .contentWrapper {
   display: grid;
-  grid-template-rows: 200px 1fr;
+  grid-template-rows: 1fr;
 }
 
 .content {
   background-color: #ffffff;
   display: grid;
-  grid-template-rows: minmax(100vh, auto);
 }
 
 .form {
