--- a/src/index.css
+++ b/src/index.css
@@ -34,8 +34,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  width: 100vw;
-  height: 100vh;
+  max-width: 100vw;
+  max-height: 100vh;
+  height: 100%;
+  width: 100%;
 }
 
 #root {
