--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 100vw;
-  max-height: 100vh;
+  min-height: 100vh;
   height: 100%;
   width: 100%;
 }
@@ -43,7 +43,6 @@ body {
 #root {
   height: 100%;
   width: 100%;
-  max-width: 100vw;
 }
 :root {
   --pink: #ddbeaa;
