--- a/src/pages/MainPage/styles.module.css
+++ b/src/pages/MainPage/styles.module.css
@@ -1,4 +1,3 @@
-.content,
 .footer {
   color: #e5e3e4;
 }
@@ -18,7 +17,17 @@ h3 {
 
 .contentWrapper {
   display: grid;
-  grid-template-columns: 300px 1fr;
+  transition: grid-template 0.5s;
+}
+
+.contentWrapper_wide {
+  display: grid;
+  grid-template: minmax(100vh, auto) / 300px 1fr;
+}
+
+.contentWrapper_narrow {
+  display: grid;
+  grid-template: minmax(100vh, auto) / 50px 1fr;
 }
 
 .main {
@@ -38,13 +47,6 @@ h3 {
 }
 .mainBtn:hover {
   opacity: 1;
-}
-
-.root2 {
-  display: grid;
-  grid-template-rows: minmax(100vh, auto);
-  grid-template-columns: 300px 1fr;
-  text-align: center;
 }
 
 .hero {
