--- a/src/pages/FilterPage/styles.module.css
+++ b/src/pages/FilterPage/styles.module.css
@@ -1,7 +1,11 @@
 .root {
   color: black;
   padding: 20px;
-  border: 1px solid var(--dark-green);
+  text-align: left;
+}
+
+.root:nth-child(2n+1) {
+  border-top:1px solid var(--dark-green);
 }
 
 .name {
@@ -52,20 +56,7 @@ h2 {
   flex-direction: column;
 }
 
-.mainBtn {
-  margin: 8rem auto;
-  background-color: var(--white) !important;
-  opacity: 0.75;
-  transition: opacity linear 0.3s;
-  color: var(--white);
-  border: 3px solid var(--dark-green) !important;
-  color: var(--dark-green);
-}
-.mainBtn:hover {
-  opacity: 1;
-  background-color: var(--dark-green) !important;
-  color: var(--white) !important;
-}
+
 
 .root2 {
   display: grid;
